--- a/class.html
+++ b/class.html
@@ -124,13 +124,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c1.jpg" alt="">
+                      <img src="images/team_14.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          First Team
                         </h2>
                       </div>
                     </div>
@@ -144,13 +144,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c2.jpg" alt="">
+                      <img src="images/team_12.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          Academy
                         </h2>
                       </div>
                     </div>
@@ -164,13 +164,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c1.jpg" alt="">
+                      <img src="images/team_12.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          Fist Team
                         </h2>
                       </div>
                     </div>
@@ -184,13 +184,13 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
                 <div class="item">
                   <div class="box">
                     <div class="img-box">
-                      <img src="images/c2.jpg" alt="">
+                      <img src="images/team_14.jpg" alt="">
                       <div class="detail-box">
                         <button>
                           <img src="images/play-icon.png" alt="">
                         </button>
                         <h2>
-                          Boxing
+                          Academy
                         </h2>
                       </div>
                     </div>
