--- a/class.html
+++ b/class.html
@@ -284,7 +284,7 @@ The Sporting Pearls first team is a blend of seasoned professionals and rising s
             </div>
             <div class="col-md-6  px-0">
               <div class="img-box">
-                <img src="images/footer-img.jpg" alt="">
+                <img src="images/team_15.jpg" alt="">
               </div>
             </div>
           </div>
