--- a/blog.html
+++ b/blog.html
@@ -119,7 +119,7 @@
         <div class="col-md-6 pl-0">
           <div class="box b1">
             <div class="img-box">
-              <img src="images/b1.jpg" alt="">
+              <img src="images/team_11.jpg" alt="">
             </div>
             <div class="row">
               <div class="col-lg-8 col-md-10 ml-auto">
@@ -147,7 +147,7 @@
         <div class="col-md-6 pr-0">
           <div class="box b2">
             <div class="img-box">
-              <img src="images/b2.jpg" alt="">
+              <img src="images/team_13.jpg" alt="">
             </div>
             <div class="row">
               <div class="col-lg-8 col-md-10 mr-auto">
@@ -241,8 +241,8 @@
                   </a>
                 </div>
                 <p>
-                  &copy; 2020 All Rights Reserved. Design by
-                  <a href="https://html.design/">Free Html Templates</a>
+                  &copy; 2025 All Rights Reserved. Design by
+                  <a href="https://html.design/">Sporting Pearls</a>
                 </p>
               </section>
               <!-- footer section -->
@@ -250,7 +250,7 @@
             </div>
             <div class="col-md-6  px-0">
               <div class="img-box">
-                <img src="images/footer-img.jpg" alt="">
+                <img src="images/team_10.jpg" alt="">
               </div>
             </div>
           </div>
